--- a/flower.html
+++ b/flower.html
@@ -11,6 +11,9 @@
 <body class="container">
   <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
     <div class="night"></div>
+    <div class="motivational-text">
+      <h1>Semangat Sayangku</h1>
+    </div>
     <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
